address minor ui issue on mobile header

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -25,3 +25,10 @@
   transform: translateY(-100%); /* Slide up to hide */
   transition: transform 0.5s ease-in-out;
 }
+
+/* mobile menu list */
+.mobileMenuList {
+  position: relative;
+  width: 100%;
+  outline: none;
+}
